# ROS2-Example

./: README.md
src/apresentacao_interfaces/: CMakeLists.txt  package.xml
src/apresentacao_interfaces/msg/: Telemetria.msg
src/sensor_comunication/: CMakeLists.txt  package.xml
src/sensor_comunication/src/: sensor_emulator.cpp  sensor_real.cpp
src/sensor_filter/: CMakeLists.txt  package.xml
src/sensor_filter/src/: telemetry_filter.cpp
src/startup/: package.xml  setup.py
src/startup/launch/: all_nodes.py
